<?xml version="1.0"?>
<package>
  <name>apriltag_object_detection</name>
  <version>0.0.0</version>
  <description>The apriltag_object_detection package</description>

  <maintainer email="jonetzko@informatik.uni-hamburg.de">Yannick Jonetzko</maintainer>

  <author email="jonetzko@informatik.uni-hamburg.de">Yannick Jonetzko</author>
  <author email="1kayser@informatik.uni-hamburg.de">Henning Kayser</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>apriltags2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>apriltags2_ros</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
